# chakshu

./: .gitignore  ARCH.md  Makefile  README.md  dataset.yaml  pyproject.toml
runs/detect/chakshu_yolov8n/: args.yaml  results.csv
src/: constants.py  data_inspection.py  prepare_data.py  train.py  win_constants.py  wsl_constants.py
src/archive/: 02_visual_quality_check.py
src/inspection/: 01_data_inspection.py  03_check_for_false_triggers.py  04_gpu_check.py
